--- a/vercel.json
+++ b/vercel.json
@@ -4,6 +4,8 @@
     {"src": "./src/main.ts", "use": "@vercel/node"}
   ],
   "routes":[
-    {"src": "/.*", "dest": "/"}
+    {"src": "/.*", "dest": "src/main.ts",
+      "methods": ["GET"]
+  }
   ]
 }
