--- a/vercel.json
+++ b/vercel.json
@@ -1,11 +1,18 @@
 {
   "version": 2,
-  "builds":[
-    {"src": "src/main.ts", "use": "@vercel/node"}
+  "builds": [
+    {
+      "src": "src/main.ts",
+      "use": "@vercel/node"
+    }
   ],
-  "routes":[
-    {"src": "/.*", "dest": "src/main.ts",
-      "methods": ["GET"]
-  }
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "src/main.ts",
+      "methods": [
+        "GET"
+      ]
+    }
   ]
 }
