--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "rxjs": "^7.2.0",
     "sequelize": "^6.31.0",
     "sequelize-typescript": "^2.1.5",
-    "sqlite3": "^5.1.6"
+    "sqlite3": "^5.1.6",
+    "prisma": "^4.13.0"
   },
   "devDependencies": {
     "@faker-js/faker": "^7.6.0",
@@ -51,7 +52,6 @@
     "eslint-plugin-prettier": "^4.0.0",
     "jest": "29.5.0",
     "prettier": "^2.3.2",
-    "prisma": "^4.13.0",
     "source-map-support": "^0.5.20",
     "supertest": "^6.1.3",
     "ts-jest": "29.0.5",
