--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
-    "build": "nest build npx prisma migrate dev --name init",
+    "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
     "start:dev": "nest start --watch",
@@ -29,12 +29,12 @@
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/sequelize": "^9.0.2",
     "@prisma/client": "^4.13.0",
+    "prisma": "^4.13.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0",
     "sequelize": "^6.31.0",
     "sequelize-typescript": "^2.1.5",
-    "sqlite3": "^5.1.6",
-    "prisma": "^4.13.0"
+    "sqlite3": "^5.1.6"
   },
   "devDependencies": {
     "@faker-js/faker": "^7.6.0",
