--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 
 
-DATABASE_URL="postgres://postgres:LQgGG2ek9TKDqqLYvQij@db.aazxuygwwdasvaasdyig.supabase.co:5432/postgres"
+DATABASE_URL=
 PORT=3000
